# EVE-skills-discord

./: Cargo.toml  README
.github/workflows/: release.yml  testing.yml
src/: esi.rs  main.rs  webserver.rs
src/discord/: mod.rs  monitor.rs
src/monitor/: install.rs  load.rs  mod.rs  storage.rs
src/state/: discord.rs  esi.rs  mod.rs  monitor.rs  pending.rs
